--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="name" content="Relationship Deleter">
+  <meta name="description" content="Discord Relationship Deleter (Yashinu)">
+  <meta property="og:url" content="https://yashinu.github.io/relationshipDeleter/">
+  <meta property="og:title" content="Relationship Deleter">
+  <meta property="og:description" content="Discord Relationship Deleter (Yashinu)">
+  <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/6/6d/Windows_Settings_app_icon.png">
+  <meta name="keywords" content="Yashinu, Discord, Relationship, Deleter">
+  <meta name="author" content="Yashinu">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
